exports[`test SignupForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1>
      There you are!
    </h1>
    <p>
      We’ve been looking for outstanding digital businesses to help deliver 21st century products and services to local, state and federal government through the Digital Marketplace.
    </p>
    <p>
      And better still, we’ve streamlined the process so you could be competing for new business within weeks — rather than months.
    </p>
  </header>
  <h2>
     Ready to get started?
  </h2>
  <article
    role="main">
    <form
      action={undefined}
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="email"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create your seller account" />
      <p>
        <small>
          All activity on the Digital Marketplace is subject to our 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;

exports[`test SignupForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1>
      There you are!
    </h1>
    <p>
      We’ve been looking for outstanding digital businesses to help deliver 21st century products and services to local, state and federal government through the Digital Marketplace.
    </p>
    <p>
      And better still, we’ve streamlined the process so you could be competing for new business within weeks — rather than months.
    </p>
  </header>
  <h2>
     Ready to get started?
  </h2>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="signup"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="name">
          Full name
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="name"
          maxLength={undefined}
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="email">
          Email address
        </label>
        <input
          aria-describedby={undefined}
          className=""
          disabled={false}
          id="email"
          maxLength={undefined}
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="email"
          value="" />
      </div>
      <input
        role="button"
        type="submit"
        value="Create your seller account" />
      <p>
        <small>
          All activity on the Digital Marketplace is subject to our 
          <a
            href="/terms-of-use">
            Terms of Use
          </a>
          .
        </small>
      </p>
    </form>
  </article>
</div>
`;
